codigo de kaggle puesto en local

--- a/ejemplo_1.ipynb
+++ b/ejemplo_1.ipynb
@@ -30,7 +30,7 @@
    "id": "30395f5c",
    "metadata": {},
    "source": [
-    "### configuración"
+    "### Configuración"
    ]
   },
   {
@@ -644,6 +644,225 @@
     "        })\n",
     "    \n",
     "    return sequences, sequence_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ca8447d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_lstm(models_x, models_y, scalers, test_input, test_template):\n",
+    "    \"\"\"Generate predictions from LSTM ensemble\"\"\"\n",
+    "    sequences, seq_ids = prepare_lstm_sequences(test_input, test_template, Config.LSTM_WINDOW_SIZE)\n",
+    "    X_test_unscaled = np.array(sequences, dtype=object)\n",
+    "    test_meta = pd.DataFrame(seq_ids)\n",
+    "    \n",
+    "    x_last = np.array([seq[-1, 0] for seq in X_test_unscaled], dtype=np.float32)\n",
+    "    y_last = np.array([seq[-1, 1] for seq in X_test_unscaled], dtype=np.float32)\n",
+    "    test_meta['x_last'] = x_last\n",
+    "    test_meta['y_last'] = y_last\n",
+    "    \n",
+    "    per_model_dx, per_model_dy = [], []\n",
+    "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "    \n",
+    "    for i, (model_x, model_y, scaler) in enumerate(zip(models_x, models_y, scalers)):\n",
+    "        scaled = np.array([scaler.transform(s) for s in X_test_unscaled], dtype=object)\n",
+    "        stacked = np.stack(scaled.astype(np.float32))\n",
+    "        test_dataset = torch.utils.data.TensorDataset(torch.from_numpy(stacked))\n",
+    "        loader = torch.utils.data.DataLoader(test_dataset, batch_size=1024, shuffle=False)\n",
+    "        \n",
+    "        dx_list, dy_list = [], []\n",
+    "        with torch.no_grad():\n",
+    "            for (batch,) in loader:\n",
+    "                batch = batch.to(device)\n",
+    "                dx = model_x(batch).cpu().numpy()\n",
+    "                dy = model_y(batch).cpu().numpy()\n",
+    "                dx_list.append(dx)\n",
+    "                dy_list.append(dy)\n",
+    "        \n",
+    "        dx_cum = np.vstack(dx_list)\n",
+    "        dy_cum = np.vstack(dy_list)\n",
+    "        per_model_dx.append(dx_cum)\n",
+    "        per_model_dy.append(dy_cum)\n",
+    "    \n",
+    "    ens_dx = np.mean(np.stack(per_model_dx, axis=0), axis=0)\n",
+    "    ens_dy = np.mean(np.stack(per_model_dy, axis=0), axis=0)\n",
+    "    \n",
+    "    out_rows = []\n",
+    "    for i, seq_info in test_meta.iterrows():\n",
+    "        game_id = int(seq_info['game_id'])\n",
+    "        play_id = int(seq_info['play_id'])\n",
+    "        nfl_id = int(seq_info['nfl_id'])\n",
+    "        \n",
+    "        frame_ids = test_template[\n",
+    "            (test_template['game_id'] == game_id) &\n",
+    "            (test_template['play_id'] == play_id) &\n",
+    "            (test_template['nfl_id'] == nfl_id)\n",
+    "        ]['frame_id'].sort_values().tolist()\n",
+    "        \n",
+    "        for t, frame_id in enumerate(frame_ids):\n",
+    "            if t < ens_dx.shape[1]:\n",
+    "                px = x_last[i] + ens_dx[i, t]\n",
+    "                py = y_last[i] + ens_dy[i, t]\n",
+    "            else:\n",
+    "                px = x_last[i] + ens_dx[i, -1]\n",
+    "                py = y_last[i] + ens_dy[i, -1]\n",
+    "            \n",
+    "            out_rows.append({\n",
+    "                'id': f\"{game_id}_{play_id}_{nfl_id}_{frame_id}\",\n",
+    "                'x': px,\n",
+    "                'y': py\n",
+    "            })\n",
+    "    \n",
+    "    predictions = pd.DataFrame(out_rows)\n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d9c0634",
+   "metadata": {},
+   "source": [
+    "## Estrategia de ensamble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62cb5240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_ensemble(catboost_pred, lstm_pred, test_input, weights, use_role_specific=False, role_weights=None):\n",
+    "    \"\"\"Combine predictions from both models using weighted averaging\"\"\"\n",
+    "    assert set(catboost_pred['id']) == set(lstm_pred['id']), \"ID mismatch between models\"\n",
+    "    \n",
+    "    catboost_pred = catboost_pred.sort_values('id').reset_index(drop=True)\n",
+    "    lstm_pred = lstm_pred.sort_values('id').reset_index(drop=True)\n",
+    "    \n",
+    "    if use_role_specific and role_weights is not None:\n",
+    "        role_info = test_input[['game_id', 'play_id', 'nfl_id', 'player_role']].drop_duplicates()\n",
+    "        role_info['id_prefix'] = (role_info['game_id'].astype(str) + '_' + \n",
+    "                                  role_info['play_id'].astype(str) + '_' + \n",
+    "                                  role_info['nfl_id'].astype(str))\n",
+    "        \n",
+    "        ensemble_rows = []\n",
+    "        role_stats = {}\n",
+    "        \n",
+    "        for _, row in catboost_pred.iterrows():\n",
+    "            pred_id = row['id']\n",
+    "            id_prefix = '_'.join(pred_id.split('_')[:3])\n",
+    "            \n",
+    "            role_match = role_info[role_info['id_prefix'] == id_prefix]\n",
+    "            if len(role_match) > 0:\n",
+    "                role = role_match.iloc[0]['player_role']\n",
+    "            else:\n",
+    "                role = 'Unknown'\n",
+    "            \n",
+    "            if role in role_weights:\n",
+    "                w_cat = role_weights[role]['catboost']\n",
+    "                w_lstm = role_weights[role]['lstm']\n",
+    "            else:\n",
+    "                w_cat = role_weights['default']['catboost']\n",
+    "                w_lstm = role_weights['default']['lstm']\n",
+    "            \n",
+    "            role_stats[role] = role_stats.get(role, 0) + 1\n",
+    "            \n",
+    "            total_weight = w_cat + w_lstm\n",
+    "            lstm_row = lstm_pred[lstm_pred['id'] == pred_id].iloc[0]\n",
+    "            \n",
+    "            ensemble_rows.append({\n",
+    "                'id': pred_id,\n",
+    "                'x': (row['x'] * w_cat + lstm_row['x'] * w_lstm) / total_weight,\n",
+    "                'y': (row['y'] * w_cat + lstm_row['y'] * w_lstm) / total_weight\n",
+    "            })\n",
+    "        \n",
+    "        ensemble = pd.DataFrame(ensemble_rows)\n",
+    "        print(\"\\nRole-specific weights applied:\")\n",
+    "        for role, count in sorted(role_stats.items(), key=lambda x: x[1], reverse=True):\n",
+    "            print(f\"  {role}: {count} predictions\")\n",
+    "    else:\n",
+    "        w_cat = weights['catboost']\n",
+    "        w_lstm = weights['lstm']\n",
+    "        total_weight = w_cat + w_lstm\n",
+    "        \n",
+    "        ensemble = pd.DataFrame({\n",
+    "            'id': catboost_pred['id'],\n",
+    "            'x': (catboost_pred['x'] * w_cat + lstm_pred['x'] * w_lstm) / total_weight,\n",
+    "            'y': (catboost_pred['y'] * w_cat + lstm_pred['y'] * w_lstm) / total_weight\n",
+    "        })\n",
+    "    \n",
+    "    ensemble['x'] = np.clip(ensemble['x'], Config.FIELD_X_MIN, Config.FIELD_X_MAX)\n",
+    "    ensemble['y'] = np.clip(ensemble['y'], Config.FIELD_Y_MIN, Config.FIELD_Y_MAX)\n",
+    "    \n",
+    "    return ensemble"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "862417d7",
+   "metadata": {},
+   "source": [
+    "## Ejecución"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7249002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    print(\"Loading test data...\")\n",
+    "    test_input = pd.read_csv(Config.DATA_DIR / \"test_input.csv\")\n",
+    "    test_template = pd.read_csv(Config.DATA_DIR / \"test.csv\")\n",
+    "    print(f\"Test input: {test_input.shape[0]:,} rows, {test_input.shape[1]} columns\")\n",
+    "    print(f\"Test template: {test_template.shape[0]:,} predictions required\")\n",
+    "    \n",
+    "    print(\"\\nLoading models...\")\n",
+    "    models_x_cat, models_y_cat, features_cat = load_catboost_models(Config.CATBOOST_MODEL_PATH)\n",
+    "    print(f\"CatBoost: {len(models_x_cat)} folds, {len(features_cat)} features\")\n",
+    "    \n",
+    "    models_x_lstm, models_y_lstm, scalers_lstm = load_lstm_models(Config.LSTM_MODEL_DIR, Config.LSTM_N_FOLDS)\n",
+    "    print(f\"LSTM: {len(models_x_lstm)} folds loaded\")\n",
+    "    \n",
+    "    print(\"\\nGenerating CatBoost predictions...\")\n",
+    "    catboost_pred = predict_catboost(models_x_cat, models_y_cat, features_cat, test_input, test_template)\n",
+    "    print(f\"CatBoost predictions: {len(catboost_pred):,}\")\n",
+    "    print(f\"  X range: [{catboost_pred['x'].min():.2f}, {catboost_pred['x'].max():.2f}]\")\n",
+    "    print(f\"  Y range: [{catboost_pred['y'].min():.2f}, {catboost_pred['y'].max():.2f}]\")\n",
+    "    \n",
+    "    print(\"\\nGenerating LSTM predictions...\")\n",
+    "    lstm_pred = predict_lstm(models_x_lstm, models_y_lstm, scalers_lstm, test_input, test_template)\n",
+    "    print(f\"LSTM predictions: {len(lstm_pred):,}\")\n",
+    "    print(f\"  X range: [{lstm_pred['x'].min():.2f}, {lstm_pred['x'].max():.2f}]\")\n",
+    "    print(f\"  Y range: [{lstm_pred['y'].min():.2f}, {lstm_pred['y'].max():.2f}]\")\n",
+    "    \n",
+    "    print(\"\\nCreating ensemble...\")\n",
+    "    ensemble_pred = create_ensemble(\n",
+    "        catboost_pred, \n",
+    "        lstm_pred, \n",
+    "        test_input,\n",
+    "        Config.ENSEMBLE_WEIGHTS,\n",
+    "        use_role_specific=Config.USE_ROLE_SPECIFIC_WEIGHTS,\n",
+    "        role_weights=Config.ROLE_SPECIFIC_WEIGHTS if Config.USE_ROLE_SPECIFIC_WEIGHTS else None\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"\\nEnsemble predictions: {len(ensemble_pred):,}\")\n",
+    "    print(f\"  X range: [{ensemble_pred['x'].min():.2f}, {ensemble_pred['x'].max():.2f}]\")\n",
+    "    print(f\"  Y range: [{ensemble_pred['y'].min():.2f}, {ensemble_pred['y'].max():.2f}]\")\n",
+    "    print(f\"  Mean X: {ensemble_pred['x'].mean():.2f}, Std X: {ensemble_pred['x'].std():.2f}\")\n",
+    "    print(f\"  Mean Y: {ensemble_pred['y'].mean():.2f}, Std Y: {ensemble_pred['y'].std():.2f}\")\n",
+    "    print(f\"  NaN values: {ensemble_pred.isnull().sum().sum()}\")\n",
+    "    \n",
+    "    ensemble_pred.to_csv('submission.csv', index=False)\n",
+    "    print(\"\\nSubmission file created successfully\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
